<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinPartida">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#F1FAEE"

        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"

            >

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textAlignment="center"
                android:textSize="40dp"
                tools:text="@string/resultados"
                android:textColor="#E63946"/>


            <ImageView
                android:id="@+id/logoImageResult"
                android:layout_width="173dp"
                android:layout_height="180dp"
                android:src="@drawable/img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/puntaje_final"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textColor="#1D3557"/>

                <TextView
                    android:id="@+id/textViewResultFin"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    tools:text="0"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <TextView
                    android:id="@+id/textViewQuestion"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/puntacion_por_pregunta"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="#457B9D"/>

                <TextView
                    android:id="@+id/textViewQuest"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:text="0"
                    android:textColor="#457B9D"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/penalizacion_por_pista"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="#457B9D"/>

                <TextView
                    android:id="@+id/textViewHist"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:text="0"
                    android:textColor="#457B9D">

                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                >

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bonificacion_por_pista_no_utilizada"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="#457B9D"/>

                <TextView
                    android:id="@+id/textViewBonf"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:text="0"
                    android:textColor="#457B9D"
                    />
            </LinearLayout>


            <Button
                android:id="@+id/regresarInicioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/regresar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jugarButton"
                android:textColor="#1D3557"
                android:backgroundTint="#E63946"/>
        </LinearLayout>
    </LinearLayout>









</androidx.constraintlayout.widget.ConstraintLayout>